tests/ui/generic-associated-types/parse/trait-path-types.stderr
error: expected one of `,`, `:`, or `>`, found `=`
  --> $DIR/trait-path-types.rs:6:37
   |
LL |   fn f<'a>(arg : Box<dyn X< [u8; 1] = u32>>) {}
   |                                     ^ expected one of `,`, `:`, or `>`
   |
help: you might have meant to end the type parameters here
   |
LL |   fn f<'a>(arg : Box<dyn X< [u8; 1]> = u32>>) {}
   |                                    +

error: expected one of `,`, `:`, or `>`, found `=`
  --> $DIR/trait-path-types.rs:11:37
   |
LL |   fn f1<'a>(arg : Box<dyn X<(Y<'a>) = &'a ()>>) {}
   |                                     ^ expected one of `,`, `:`, or `>`
   |
help: you might have meant to end the type parameters here
   |
LL |   fn f1<'a>(arg : Box<dyn X<(Y<'a>)> = &'a ()>>) {}
   |                                    +

error: expected one of `,`, `:`, or `>`, found `=`
  --> $DIR/trait-path-types.rs:16:33
   |
LL |   fn f1<'a>(arg : Box<dyn X< 'a = u32 >>) {}
   |                                 ^ expected one of `,`, `:`, or `>`
   |
help: you might have meant to end the type parameters here
   |
LL |   fn f1<'a>(arg : Box<dyn X< 'a> = u32 >>) {}
   |                                +

error: aborting due to 3 previous errors

